--- a/.gitignore
+++ b/.gitignore
@@ -26,11 +26,12 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env
+.env.*
 
 # vercel
 .vercel
-.env
+
 
 # typescript
 *.tsbuildinfo
